Update PollenClient.java